--- a/baseindex/templates/baseindex/base.html
+++ b/baseindex/templates/baseindex/base.html
@@ -13,16 +13,54 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
             <!-- Latest compiled JavaScript -->
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+            <link rel="stylesheet" href="{% static 'baseindex/css/main.css' %}">
         {% endblock %}
         <title>{% block title %}Django Base Dev Site{% endblock %}</title>
         {% block header %}
         {% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+            <!-- Brand -->
+            <a class="navbar-brand" href="#">Django Dev Sever</a>
+
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!--Actual Menu-->
+            <div class="collapse navbar-collapse flex-row-reverse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+
+                    <!-- Dropdown -->
+                    <!--
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Projects</a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">To-Do</a>
+                        <a class="dropdown-item" href="#">LIM</a>
+                        <a class="dropdown-item" href="#">Fish Eating</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>-->
+                </ul>
+            </div>
+        </nav>
         <div class="container">
+            <!-- start of content -->
             {% block content %}
             <p>This is just the base</p>
             {% endblock %}
+            <!-- end of content -->
         </div>
 
     </body>
