--- a/baseindex/templates/baseindex/index.html
+++ b/baseindex/templates/baseindex/index.html
@@ -4,6 +4,7 @@
 <div class="row">
     <div class="col">
         <h3>Index</h3>
+        <p class="parg">This site should act as a foundation for displaying some apps built in django.</p>
     </div>
 </div>
 {% endblock %}
