--- a/baseindex/templates/baseindex/base.html
+++ b/baseindex/templates/baseindex/base.html
@@ -22,7 +22,7 @@
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
             <!-- Brand -->
-            <a class="navbar-brand" href="#">Django Dev Sever</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Django Dev Server</a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse flex-row-reverse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="{% url 'index' %}">Home</a>
                     </li>
 
                     <!-- Dropdown -->
