updates to index and main.css in baseindex

--- a/baseindex/templates/baseindex/index.html
+++ b/baseindex/templates/baseindex/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="row">
     <div class="col">
-        <h3>Index</h3>
-        <p class="parg">This site should act as a foundation for displaying some apps built in django.</p>
+        <h3>Index of Apps</h3>
+        <p class="parg">This site is acting as a basic foundation for displaying apps built using django.</p>
     </div>
 </div>
 {% endblock %}
