--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -35,6 +35,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'dashboard' %}">{% block home %}Home{% endblock %}</a>
                     </li>
+                {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        </li>
+                {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{url 'register' %}">Register</a>
+                        </li>
+                {% endif %}
 
                     <!-- Dropdown -->
                     <!--
