--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="{% url 'login' %}">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{url 'register' %}">Register</a>
+                            <a class="nav-link" href="{% url 'registration' %}">Register</a>
                         </li>
                 {% endif %}
 
