--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -15,14 +15,14 @@
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
             <link rel="stylesheet" href="{% static 'service/css/main.css' %}">
         {% endblock %}
-        <title>{% block title %}Service & Ticketing{% endblock %}</title>
+        <title>{% block title %}Dashboard{% endblock %}</title>
         {% block header %}
         {% endblock %}
     </head>
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
             <!-- Brand -->
-            <a class="navbar-brand" href="{% url 'dashboard' %}">{% block brand %} Service & Ticketing {% endblock %}</a>
+            <a class="navbar-brand" href="{% url 'dashboard' %}">{% block brand %}Dashboard{% endblock %}</a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse flex-row-reverse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'dashboard' %}">{% block home %}Home{% endblock %}</a>
+                        <a class="nav-link" href="{% url 'dashboard' %}">{% block home %}Dashboard{% endblock %}</a>
                     </li>
                 {% if user.is_authenticated %}
                         <li class="nav-item">
