--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -37,11 +37,11 @@
                     </li>
                 {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                            <a class="nav-link" href="{% url 'logout' %}?next={{ request.path | urlencode }}">Logout</a>
                         </li>
                 {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                            <a class="nav-link" href="{% url 'login' %}?next={{ request.path | urlencode }}">Login</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'registration' %}">Register</a>
