--- a/service/templates/service/dashboard.html
+++ b/service/templates/service/dashboard.html
@@ -10,6 +10,13 @@
 <div class="row">
     <div class="col-md-5 border rounded">
         <h4 class="text-center">Most Recently Closed</h4>
+        <div class="row">
+            <table id="id_events_table" class="table">
+                {% for event in events.all %}
+                    <tr><td>{{ forloop.counter }}: {{ event.description }}</td></tr>
+                {% endfor %}
+            </table>
+        </div>
     </div>
     <div class="col-md-5 offset-md-2 border rounded">
         <h4 class="text-center">Open Items</h4>
